# bayesian_webclass

./: .gitignore  CMakeLists.txt  LICENSE  README.md  html_downloader.cpp  package.xml  parser.cpp  plik.cpp  rosdoc.yaml  test.cpp
bioweb/: .sconsign.dblite  Doxyfile_in  README_EN  SConstruct  functional_tests.py
bioweb/calc/: SConscript  calc_test
bioweb/client/: bower.json  index.html  lighttpd.develop  myapp.html  myapp_body.html  myapp_include.html  unit_test_out.html
cmake/Modules/: FindGlibmm.cmake  FindLibXML++.cmake  FindLibXML2.cmake
csv/csv/: dns.csv
doc/: doc_init.txt  manifest.yaml
doc/html/: AStar_8h.html  AStar_8h__incl.map  AStar_8h__incl.md5  AStar_8h_source.html  Belief_8hpp.html  Belief_8hpp__dep__incl.map  Belief_8hpp__dep__incl.md5  Belief_8hpp__incl.map  Belief_8hpp__incl.md5  Belief_8hpp_source.html  BreadthFirst_8h.html  BreadthFirst_8h__incl.map  BreadthFirst_8h__incl.md5  BreadthFirst_8h_source.html  Chain_8h.html  Chain_8h__dep__incl.map  Chain_8h__dep__incl.md5  Chain_8h__incl.map  Chain_8h__incl.md5  Chain_8h_source.html  Classifier_8hpp.html  Classifier_8hpp__dep__incl.map  Classifier_8hpp__dep__incl.md5  Classifier_8hpp__incl.map  Classifier_8hpp__incl.md5  Classifier_8hpp_source.html  CodonAminoTable_8h.html  CodonAminoTable_8h__incl.map  CodonAminoTable_8h__incl.md5  CodonAminoTable_8h_source.html  Codon_8h.html  Codon_8h__dep__incl.map  Codon_8h__dep__incl.md5  Codon_8h__incl.map  Codon_8h__incl.md5  Codon_8h_source.html  DecisionTree_8hpp.html  DecisionTree_8hpp__dep__incl.map  DecisionTree_8hpp__dep__incl.md5  DecisionTree_8hpp__incl.map  (+991 more)
faif/: ExceptionsFaif.hpp  Value.hpp
faif/dna/: Chain.h  EnergyNucleo.h  ExceptionsDna.h  FoldedChain.h  Nucleotide.h
faif/learning/: Classifier.hpp  Fusion.hpp  RandomForest.hpp  Validator.hpp
faif/search/: BreadthFirst.h  Node.hpp  UnifiedCost.h  VectorIndividual.hpp
faif/timeseries/: Predictions.hpp
faif/utils/: Power.hpp  Random.hpp  RandomCustomDistr.hpp
include/bayesian_webclass/: classifier.h  csv.h  data_preprocessor.h  dictionary.h  html_downloader.h  http_downloader.h
include/faif/: Point.hpp  Version.hpp
output/: 10.txt  103.txt  108.txt  11.txt  110.txt  111.txt  112.txt  117.txt  118.txt  119.txt  12.txt  14.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  3.txt  33.txt  34.txt  35.txt  39.txt  4.txt  41.txt  44.txt  48.txt  5.txt  50.txt  51.txt  53.txt  57.txt  58.txt  59.txt  6.txt  63.txt  (+21 more)
src/: CMakeLists.txt  classifier.cpp  csv.cpp  data_preprocessor.cpp  dictionary.cpp  html_downloader.cpp  http_downloader.cpp  show_all_xml_nodes.cpp  test.cpp  tidy.cpp  utilities.cpp
test/: csv_gtest.cpp  url_validation_gtest.cpp
test/basic_tests/: url_validation_gtest.cpp
test/csv/: 4dns.csv
test/data/: invalid_formating.csv  invalid_urls.txt  non_int_id.csv  one_non_int_id.csv  reverse_formating.csv  valid_formatting.csv
txt/: all_atributes.txt.txt  attrib_EN.txt  http_addresses.txt  linki.txt
txt/attributes/: attrib_EN.txt  attrib_PL.txt
txt/categories/: Exact_solutions_in_general_relativity.txt  Faster-than-light_travel.txt  Frames_of_reference.txt  Gravitational-wave_astronomy.txt  Gravitational_lensing.txt  Gravitational_waves.txt  Lorentzian_manifolds.txt  Mathematical_methods_in_general_relativity.txt  Relativity_theorists.txt  Tests_of_general_relativity.txt  black_hole.txt  effects_of_gravitation.txt  list_of_categories.txt  relativity_theorists.txt
txt/html/: http_addresses.txt
txt/output/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+394 more)
txt/test_data/: Exact_solutions_in_general_relativity_test.txt  Faster-than-light_travel.txt  Frames_of_reference_test.txt  Gravitational-wave_astronomy_test.txt  Gravitational_lensing.txt  Gravitational_waves.txt  Lorentzian_manifolds.txt  Mathematical_methods_in_general_relativity_test.txt  Relativity_theorists.txt  Tests_of_general_relativity.txt  black_hole_test.txt  effects_of_gravitation.txt  relativity_theorists_test.txt
txt/train_data/: Exact_solutions_in_general_relativity_train.txt  Faster-than-light_travel_train.txt  Frames_of_reference_train.txt  Gravitational-wave_astronomy_train.txt  Gravitational_lensing.txt  Gravitational_waves.txt  (+7 more)
xml/: kod_html_do_tidy.xml
(+184 files in other folders)
